// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scopes render should correctly render component 1`] = `
<form>
  <form-field-stub>
    <v-description-stub>
      Application requests following scopes. Press the&nbsp;"Allow" button to&nbsp;grant these permissions.
    </v-description-stub>
  </form-field-stub>
  <div class="form-field v-mb-24"></div>
  <form-controls-stub>
    <!---->
    <v-button-stub skin="primary" size="normal" disabled="true" fluid="true" type="primary" data-test="submit-button">
      Allow
    </v-button-stub>
  </form-controls-stub>
</form>
`;

exports[`Scopes render should render checkboxes with given scopes 1`] = `
<form>
  <form-field-stub>
    <v-description-stub>
      Application requests following scopes. Press the&nbsp;"Allow" button to&nbsp;grant these permissions.
    </v-description-stub>
  </form-field-stub>
  <div class="form-field v-mb-24">
    <scopes-checkbox-tree-stub children="[object Object]" valuesmap="[object Object]" level="[object Object]" data-test="scopes-tree"></scopes-checkbox-tree-stub>
    <scopes-checkbox-tree-stub children="[object Object]" valuesmap="[object Object]" level="[object Object]" data-test="scopes-tree"></scopes-checkbox-tree-stub>
  </div>
  <form-controls-stub>
    <!---->
    <v-button-stub skin="primary" size="normal" fluid="true" type="primary" data-test="submit-button">
      Allow
    </v-button-stub>
  </form-controls-stub>
</form>
`;
